--- a/tex/shortcuts.tex
+++ b/tex/shortcuts.tex
@@ -13,6 +13,7 @@
 \newcommand{\sbml}{SBML\xspace}
 \newcommand{\cellml}{CellML\xspace}
 \newcommand{\xml}{XML\xspace}
+\newcommand{\rdf}{\xml~RDF\xspace}
 \newcommand{\owl}{OWL\xspace}
 
 \newcommand{\masymos}{MaSyMoS\xspace}
