added new section to describe existing model repos and added ref fro Lysenko2016

--- a/tex/background-repos.tex
+++ b/tex/background-repos.tex
@@ -1,10 +1,18 @@
 % !TeX spellcheck = en_US
+\section{Existing Model repositories}
+\todo{}
+\begin{itemize}
+	\item use/cite mostly introduction from \cite{Waltemath2013}
+	\item maybe also cite \cite{Lysenko2016}?
+\end{itemize}
+
 \section{Using graph databases to store \sysbio models}
 \label{sec:graph-db}
 \begin{itemize}
 	\item \masymos exists
 	\item graph databases (eg. neo4j) are more suitable for inhomogeneous data
 	\item queries are easier
+	\item bio networks are graphs -> graph database \cite{Lysenko2016}
 \end{itemize}
 
 \subsection{Graph Databases}
