--- a/tex/zotero.bib
+++ b/tex/zotero.bib
@@ -655,4 +655,21 @@ of the compendium concept itself.},
   pmid = {22027554}
 }
 
+@article{Lysenko2016,
+  title = {Representing and Querying Disease Networks Using Graph Databases},
+  volume = {9},
+  issn = {1756-0381},
+  doi = {10.1186/s13040-016-0102-8},
+  language = {en},
+  timestamp = {2016-10-10T08:56:34Z},
+  number = {1},
+  urldate = {2016-10-10},
+  url = {http://biodatamining.biomedcentral.com/articles/10.1186/s13040-016-0102-8},
+  journal = {BioData Mining},
+  author = {Lysenko, Artem and Roznov{\u a}{\c t}, Irina A. and Saqi, Mansoor and Mazein, Alexander and Rawlings, Christopher J and Auffray, Charles},
+  month = dec,
+  year = {2016},
+  file = {Lysenko et al. - 2016 - Representing and querying disease networks using g.pdf:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/FXTEXR8C/Lysenko et al. - 2016 - Representing and querying disease networks using g.pdf:application/pdf}
+}
+
 
