revised introduction, according to dagmars remarks

--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -1,23 +1,23 @@
 % !TeX spellcheck = en_US
 \section{Motivation}
 "Scientific publications have at least two goals: (i) to announce a result and (ii) to convince readers that the result is correct." \cite{Mesirov2010}
-This paradigm has ruled the world of scientific publications since it's beginnings, but the last two decades proved to provide challenges for it. With the improvement and further development of computational tools, more advanced analysis and complex computation gets available to a broader audience by a software packages and tools. Now people who have no or very little background in Mathematics or Compute Science face the challenge to comply with the second point, mentioned by Mesirov. Also with increasing complexity it gets challenging to describe the complicated workflow within the word limitation of a normal publication.
-For instance biologists are now easily able to acquire large datasets form DNA or RNA sequencing, which are way to large for manual analyses. Those data needs to be sanitized, converted and condensed, to make sense out of it. Resulting publications often only pay little attention to the computational processes involved or even the used algorithms.
-But why is it of such a tremendous importance to know exactly every step leading to a result? Basically this is the foundation of scientific publications and peer review. Without in-depth knowledge of the methods, the environment and the workflow it is impossible to reproduce the experiment or observation and therefore it is impossible to prove or disprove the correctness. This may lead into blind trust in publications, making room for wrong or made-up scientific findings.
+This paradigm has ruled the world of scientific publications since its beginnings, but the last two decades proved to provide challenges for it. With the improvement and further development of computational tools, more advanced analysis and complex computation gets available to a broader audience by software packages and tools. Now people who have no or very little background in Mathematics or Computer Science face the challenge to comply with the second point, mentioned by Mesirov. Also with increasing complexity it gets challenging to describe the complicated workflow within the word limitation of a normal publication.
+For instance biologists are now easily able to acquire large datasets form DNA or RNA sequencing, which are way to large for manual analyses. Those data needs to be sanitized, converted and condensed, to make sense out of it. Resulting publications often only pay little attention to the computational processes involved or even to the used algorithms. \cite{Peng2011} \todo{cite needed}
+But why is it of such a tremendous importance to know exactly every step leading to a result? Basically this is the foundation of scientific publications and peer review. Without in-depth knowledge of the methods, the environment and the workflow it is impossible to reproduce the experiment or observation and therefore it is impossible to prove or disprove the correctness the assumption. This inability may lead into blind trust in publications, making room for wrong or made-up scientific findings.
 Especially valuable are these information, when dealing with studies, which may not be easily independently redone, because of resource, time or financial constraints. \cite{Peng2011}
 So, how can the challenge of improving reproducibility be tackled? Mesirov \cite{Mesirov2010} suggests the introduction of a "Reproducible Research Environment", providing a set of tools "with the ability to automatically track the provenance of data, analyses, and results and to package them".
 The problem would be to develop and introduce this environment into the scientific community -- and even then, it would merely improve the situation for future publications.
 
-What does this mean for \sysbio? Models published in the scope of this field may or may not be available in standard formats. The tools used to create them, may or may not be openly available, or the they may or may not be development anymore. \cite{Peng2011}
-In a field, which relies heavily on expanding on existing findings, this is a huge deal.
-This fact were acknowledged by a community of System Biologists, who wanted to improve the situation of sharing and distributing biological models, so they initiated the \combine initiative "to coordinate the development of the various community standards and formats for computational models" \cite{COMBINE}
-But main standard for computational models, \sbml, wasn't enough. Therefore Dagmar Waltemath developed \sedml \cite{Kohn2008}, to share simulation experiment setups -- modeling the prior mentioned workflow of creating, sanitizing, converting and condensing/plotting data.
+What does this mean for \sysbio? \todo{State importance of models in sysbio}Models published in the scope of this field may or may not be available in standard formats. The tools used to create them, may or may not be openly available, or the they may or may not be development anymore. \cite{Peng2011}
+In a field, which relies heavily on expanding on existing findings, these issues are having a huge impact on how people work.
+This fact was acknowledged by a community of Systems Biologists, who wanted to improve the situation of sharing and distributing biological models, hence the \combine initiative was founded, "to coordinate the development of the various community standards and formats for computational models". \cite{COMBINE}
+However, a standard to describe biological networks was a huge progress, but not sufficient in terms of goal to ensure reproducibility. Therefore Dagmar Waltemath developed \sedml \cite{Waltemath2011a}, to share simulation experiment setups -- modeling the prior mentioned workflow of creating, sanitizing, converting and condensing/plotting data.
 
-Eventually another standard, the \ca was introduced \cite{Bergmann2014a}, to share all relevant information and data for reproduction. This standard is useful and important for sharing additional information along with a paper, but it is merely just a snapshot of process, leading to both benefits and problems: First it is important to freeze the setup, so it reproduces exactly the described behavior, since linking to the always newest version of the model will break the simulation description. On the other hand however the model and setup do not receive any updates or adjustments, which might lead to better insights. Further the actual development, which induced the resulting model, is not reflected -- besides basic provenance information.
+Eventually another standard, the \ca was introduced \cite{Bergmann2014a}, to share all relevant information and data for reproduction. This standard is useful and important for sharing additional information along with a paper, but it is merely just a snapshot of a process, leading to both benefits and problems: First it is important to freeze the setup, so it reproduces exactly the described behavior, since linking to the always newest version of the model will break the simulation description. On the other hand, however, the model and setup do not receive any updates or adjustments, which might lead to better insights. Further, the actual development, which induced the resulting model, is not reflected -- besides basic provenance information.
 \todo{incorporate most stats}
 
 Lacking of these features, the current situation fails tremendously on transparency, since "users are often not only interested in the current value of data but also in changes." \cite{Cobena2002}
-Object of this thesis is therefore to investigate into a concept to store system biological models in a way, that multiple versions can accessed and queried. As well as semantically annotate those versions and store the changes between each of them. These additional relations are meant to improve the ability to query for a version of a model by specific criteria and consequently improving the user experience for biologists seeking to build onto existing models, as the evolution of them is plays an important role for them. \cite{Scharm2015}
+The objective of this thesis is therefore to investigate into a concept to store systems biology models in a way, that multiple versions can accessed, queried, and compared. Further, semantical annotations of changes between these versions shall be introduced. These additional relations are meant to improve the ability to query for a version of a model by specific criteria and consequently improving the user experience for biologists seeking to build onto existing models, as the evolution of them is plays an important role for them. \cite{Scharm2015}
 \todo{ref to semantic web?}
 At the time of writing, there is currently no model repository available incorporating these features. Certainly it is not goal of this work to create a new repository, but to show a concept and provide a prototypical implementation of it.
 
