--- a/tex/shortcuts.tex
+++ b/tex/shortcuts.tex
@@ -21,7 +21,7 @@
 \newcommand{\comodi}{COMODI\xspace}
 \newcommand{\neoj}{neo4j\xspace}
 
-\newcommand{\sysbio}{System Biology\xspace}
+\newcommand{\sysbio}{Systems Biology\xspace}
 \newcommand{\rest}{REST\xspace}  % like in REST interface
 
 % TODO command
