--- a/tex/zotero.bib
+++ b/tex/zotero.bib
@@ -672,4 +672,41 @@ of the compendium concept itself.},
   file = {Lysenko et al. - 2016 - Representing and querying disease networks using g.pdf:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/FXTEXR8C/Lysenko et al. - 2016 - Representing and querying disease networks using g.pdf:application/pdf}
 }
 
+@article{Teorey1986,
+  title = {A {{Logical Design Methodology}} for {{Relational Databases Using}} the {{Extended Entity}}-Relationship {{Model}}},
+  volume = {18},
+  issn = {0360-0300},
+  doi = {10.1145/7474.7475},
+  abstract = {A database design methodology is defined for the design of large relational databases. First, the data requirements are conceptualized using an extended entity-relationship model, with the extensions being additional semantics such as ternary relationships, optional relationships, and the generalization abstraction. The extended entity-relationship model is then decomposed according to a set of basic entity-relationship constructs, and these are transformed into candidate relations. A set of basic transformations has been developed for the three types of relations: entity relations, extended entity relations, and relationship relations. Candidate relations are further analyzed and modified to attain the highest degree of normalization desired.
+The methodology produces database designs that are not only accurate representations of reality, but flexible enough to accommodate future processing requirements. It also reduces the number of data dependencies that must be analyzed, using the extended ER model conceptualization, and maintains data integrity through normalization. This approach can be implemented manually or in a simple software package as long as a "good" solution is acceptable and absolute optimality is not required.},
+  timestamp = {2016-10-10T09:50:24Z},
+  number = {2},
+  urldate = {2016-10-10},
+  url = {http://doi.acm.org/10.1145/7474.7475},
+  journal = {ACM Comput. Surv.},
+  author = {Teorey, Toby J. and Yang, Dongqing and Fry, James P.},
+  month = jun,
+  year = {1986},
+  pages = {197--222},
+  file = {ACM Full Text PDF:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/V7RRXJZP/Teorey et al. - 1986 - A Logical Design Methodology for Relational Databa.pdf:application/pdf}
+}
+
+@book{Saake2010,
+  address = {Heidelberg Hamburg},
+  edition = {4. Aufl},
+  series = {Biber-Buch},
+  title = {{Datenbanken: Konzepte und Sprachen}},
+  isbn = {978-3-8266-9057-0},
+  shorttitle = {{Datenbanken}},
+  language = {ger},
+  timestamp = {2016-10-10T09:54:14Z},
+  publisher = {{mitp, Verl.-Gruppe H{\"u}thig, Jehle, Rehm}},
+  author = {Saake, Gunter and Sattler, Kai-Uwe and Heuer, Andreas},
+  year = {2010},
+  note = {OCLC: 680676568},
+  keywords = {Datenbankentwurf,Datenbanksprache,Datenbanksystem},
+  annote = {Literaturverz. S. 729 - 750},
+  file = {Table of Contents PDF:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/ZTK2XG7X/Saake et al. - 2010 - Datenbanken Konzepte und Sprachen.pdf:application/pdf}
+}
+
 
