--- a/tex/shortcuts.tex
+++ b/tex/shortcuts.tex
@@ -25,5 +25,7 @@
 \newcommand{\rest}{REST\xspace}  % like in REST interface
 
 % TODO command
+\definecolor{magenta}{RGB}{255,0,255}
 \newcommand{\todo}[1]{{\color{red} TODO: #1}\\}
 \newcommand{\dw}[1]{\textbf{\color{green} DW: #1}\\}
+\newcommand{\ms}[1]{\textbf{\color{magenta} MS: #1}\\}
